# Mini3DRender

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_NOTREADY.md  Triangle.hpp  geometry.h  main.cpp  model.h  test_geometry.cpp  test_model.cpp
